[package]
name = "app"
version = "0.1.0"
description = "Python Editor"
authors = ["SvelteRust"]
default-run = "app"
edition = "2021"
rust-version = "1.70"

[profile.release]
lto = "fat"
strip = true

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = [] }
rustpython-vm = { git = "https://github.com/RustPython/RustPython", version = "0.2.0" }
rustpython-stdlib = { git = "https://github.com/RustPython/RustPython", version = "0.2.0" }

[features]
custom-protocol = ["tauri/custom-protocol"]
